8159888: [JVMCI] the client VM build is broken when INCLUDE_JVMCI is defined

Fix Client VM build

Reviewed-by: twisti, kvn